@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Add support for @page at-rules (CSS::Stylesheet v0.0.18+)
 
 0.0.18  2021-05-13T12:09:20+12:00
     - Documentation release
